--- a/index.html
+++ b/index.html
@@ -6,8 +6,60 @@
         <title>page</title>
     </head>
     <body>
-        <h1>Index</h1>
-        <p>Estas en el index</p>
-        <a href="page/contacto.html">contacto</a>
+        <header>
+            <div class="logo">
+                <img src="img/img0.png" width="100px" height="100px">
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="page/nosotros.html">Nosotros</a></li>
+                    <li><a href="page/portafolio.html">Portafolio</a></li>
+                    <li><a href="page/contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </header>
+        <hr>
+        <section>
+            <article>
+                <h2>Titulo del articulo</h2>
+                <p>
+                    Lorem ipsum dolor sit arnet, consertetur adipisicing elit. Esse provident
+                    asperiores, ipsa. In dicta vel, ipsa odio quasi perspicialist illo sint 
+                    reiciendis voluptatum incidunt excepturi doloremque nisi impedit rerum nam 
+                    expedita delectus molestiac voluptate, animi unde quia ex.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit arnet, consertetur adipisicing elit. Esse provident
+                    asperiores, ipsa. In dicta vel, ipsa odio quasi perspicialist illo sint 
+                    reiciendis voluptatum incidunt excepturi doloremque nisi impedit rerum nam 
+                    expedita delectus molestiac voluptate, animi unde quia ex.
+                </p>
+            </article>
+            <article>
+                <h2>Titulo del articulo</h2>
+                <p>
+                    Lorem ipsum dolor sit arnet, consertetur adipisicing elit. Esse provident
+                    asperiores, ipsa. In dicta vel, ipsa odio quasi perspicialist illo sint 
+                    reiciendis voluptatum incidunt excepturi doloremque nisi impedit rerum nam 
+                    expedita delectus molestiac voluptate, animi unde quia ex.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit arnet, consertetur adipisicing elit. Esse provident
+                    asperiores, ipsa. In dicta vel, ipsa odio quasi perspicialist illo sint 
+                    reiciendis voluptatum incidunt excepturi doloremque nisi impedit rerum nam 
+                    expedita delectus molestiac voluptate, animi unde quia ex.
+                </p>
+            </article>
+        </section>
+        <footer>
+            <div class="redes-sociales">
+                <ul>
+                    <li><a href="https://www.facebook.com">Facebook</a></li>
+                    <li><a href="https://www.twitter.com">Twitter</a></li>
+                    <li><a href="http://www.instagram.com">Instagram</a></li>
+                </ul>
+            </div>
+        </footer>
     </body>
 </html>
