--- a/index.html
+++ b/index.html
@@ -1,66 +1,21 @@
 <!doctype html>
 <html>
     <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, 
-	user-scalable = no, minimum-scale=1.0, maximum-scale=1.0">
-        <title>page</title>
-    </head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, 
+	maximum-scale=1.0, minimum-scale=1.0">
+	<link rel="stylesheet" href="css/index.css">
+    <head>
     <body>
-        <header>
-            <div class="logo">
-                <img src="img/img0.png" width="100px" height="100px">
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="page/nosotros.html">Nosotros</a></li>
-                    <li><a href="page/portafolio.html">Portafolio</a></li>
-                    <li><a href="page/contacto.html">Contacto</a></li>
-                </ul>
-            </nav>
-        </header>
-        <hr>
-        <section>
-            <article>
-                <h2>Titulo del articulo</h2>
-                <p>
-                    Lorem ipsum dolor sit arnet, consertetur adipisicing elit. Esse provident
-                    asperiores, ipsa. In dicta vel, ipsa odio quasi perspicialist illo sint 
-                    reiciendis voluptatum incidunt excepturi doloremque nisi impedit rerum nam 
-                    expedita delectus molestiac voluptate, animi unde quia ex.
-                </p>
-                <p>
-                    Lorem ipsum dolor sit arnet, consertetur adipisicing elit. Esse provident
-                    asperiores, ipsa. In dicta vel, ipsa odio quasi perspicialist illo sint 
-                    reiciendis voluptatum incidunt excepturi doloremque nisi impedit rerum nam 
-                    expedita delectus molestiac voluptate, animi unde quia ex.
-                </p>
-            </article>
-            <article>
-                <h2>Titulo del articulo</h2>
-                <p>
-                    Lorem ipsum dolor sit arnet, consertetur adipisicing elit. Esse provident
-                    asperiores, ipsa. In dicta vel, ipsa odio quasi perspicialist illo sint 
-                    reiciendis voluptatum incidunt excepturi doloremque nisi impedit rerum nam 
-                    expedita delectus molestiac voluptate, animi unde quia ex.
-                </p>
-                <p>
-                    Lorem ipsum dolor sit arnet, consertetur adipisicing elit. Esse provident
-                    asperiores, ipsa. In dicta vel, ipsa odio quasi perspicialist illo sint 
-                    reiciendis voluptatum incidunt excepturi doloremque nisi impedit rerum nam 
-                    expedita delectus molestiac voluptate, animi unde quia ex.
-                </p>
-            </article>
-        </section>
-        <footer>
-            <div class="redes-sociales">
-                <ul>
-                    <li><a href="https://www.facebook.com">Facebook</a></li>
-                    <li><a href="https://www.twitter.com">Twitter</a></li>
-                    <li><a href="http://www.instagram.com">Instagram</a></li>
-                </ul>
-            </div>
-        </footer>
+	<img src="img/chiaki.jpg" class="imagen0">
+	<img src="img/chiaki.jpg" class="imagen1">
+	<img src="img/chiaki.jpg" class="imagen2">
+	<img src="img/chiaki.jpg" class="imagen3">
+	<img src="img/chiaki.jpg" class="imagen4">
+	<img src="img/chiaki.jpg" class="imagen5">
+	<img src="img/chiaki.jpg" class="imagen6">
+	<img src="img/chiaki.jpg" class="imagen7">
+	<img src="img/chiaki.jpg" class="imagen8">
+	<img src="img/chiaki.jpg" class="imagen9">
+	<img src="img/chiaki.jpg" class="imagen10">
     </body>
 </html>
